Complete Evaluation code, Rename some instances and classes, optimize logging information, update dairy

--- a/Dairy/20230726.md
+++ b/Dairy/20230726.md
@@ -34,5 +34,5 @@ Statistics to be collected:
 - [ ] Average time of completing the route
 - [ ] Average percentage of route completion
 - [ ] Number of collisions
-- [ ] Total reward orr penalty gained
+- [ ] Total reward or penalty gained
 - 
